--- a/package.json
+++ b/package.json
@@ -10,12 +10,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.6.0",
+    "@fortawesome/free-brands-svg-icons": "^6.6.0",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "@reduxjs/toolkit": "^2.2.7",
     "antd": "^5.21.2",
     "antd-input-otp": "^2.1.0",
     "axios": "^1.7.7",
+    "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "formik": "^2.4.6",
+    "framer-motion": "^11.11.7",
     "i18next": "^23.15.1",
     "lucide-react": "^0.447.0",
     "react": "^18.3.1",
@@ -24,6 +29,7 @@
     "react-i18next": "^15.0.2",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.2",
+    "tailwind-merge": "^2.5.3",
     "yup": "^1.4.0"
   },
   "devDependencies": {
