--- a/package.json
+++ b/package.json
@@ -10,10 +10,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
     "@fortawesome/fontawesome-svg-core": "^6.6.0",
     "@fortawesome/free-brands-svg-icons": "^6.6.0",
+    "@fortawesome/free-regular-svg-icons": "^6.6.0",
+    "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@headlessui/react": "^2.1.10",
+    "@heroicons/react": "^2.1.5",
+    "@mui/material": "^6.1.4",
     "@reduxjs/toolkit": "^2.2.7",
+    "@types/react-tooltip": "^4.2.4",
     "antd": "^5.21.2",
     "antd-input-otp": "^2.1.0",
     "axios": "^1.7.7",
@@ -29,6 +37,7 @@
     "react-i18next": "^15.0.2",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.2",
+    "react-tooltip": "^5.28.0",
     "tailwind-merge": "^2.5.3",
     "yup": "^1.4.0"
   },
