--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@heroicons/react": "^2.1.5",
     "@mui/material": "^6.1.4",
     "@reduxjs/toolkit": "^2.2.7",
+    "@tabler/icons-react": "^3.21.0",
     "@types/react-tooltip": "^4.2.4",
     "antd": "^5.21.2",
     "antd-input-otp": "^2.1.0",
@@ -28,16 +29,17 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "formik": "^2.4.6",
-    "framer-motion": "^11.11.8",
+    "framer-motion": "^11.11.10",
     "i18next": "^23.15.1",
     "lucide-react": "^0.447.0",
     "react": "^18.3.1",
+    "react-bootstrap": "^2.10.5",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
     "react-i18next": "^15.0.2",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.2",
-    "tailwind-merge": "^2.5.3",
+    "tailwind-merge": "^2.5.4",
     "yup": "^1.4.0"
   },
   "devDependencies": {
