--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@headlessui/react": "^2.1.10",
     "@heroicons/react": "^2.1.5",
+    "@mui/icons-material": "^6.1.10",
     "@mui/material": "^6.1.4",
     "@reduxjs/toolkit": "^2.2.7",
     "@tabler/icons-react": "^3.21.0",
@@ -37,8 +38,11 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
     "react-i18next": "^15.0.2",
+    "react-rating-stars-component": "^2.2.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.2",
+    "react-star-ratings": "^2.3.0",
+    "react-tabs": "^6.0.2",
     "tailwind-merge": "^2.5.4",
     "yup": "^1.4.0"
   },
@@ -47,6 +51,7 @@
     "@eslint/js": "^9.9.0",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "@types/react-star-ratings": "^2.3.3",
     "@types/swiper": "^6.0.0",
     "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.20",
