--- a/package.json
+++ b/package.json
@@ -18,11 +18,12 @@
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@headlessui/react": "^2.1.10",
-    "@heroicons/react": "^2.1.5",
+    "@heroicons/react": "^2.2.0",
     "@mui/icons-material": "^6.1.10",
     "@mui/material": "^6.1.4",
+    "@radix-ui/react-accordion": "^1.2.1",
     "@reduxjs/toolkit": "^2.2.7",
-    "@tabler/icons-react": "^3.21.0",
+    "@tabler/icons-react": "^3.24.0",
     "@types/react-tooltip": "^4.2.4",
     "antd": "^5.21.2",
     "antd-input-otp": "^2.1.0",
@@ -30,7 +31,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "formik": "^2.4.6",
-    "framer-motion": "^11.11.10",
+    "framer-motion": "^11.13.1",
     "i18next": "^23.15.1",
     "lucide-react": "^0.447.0",
     "react": "^18.3.1",
@@ -43,7 +44,7 @@
     "react-router-dom": "^6.26.2",
     "react-star-ratings": "^2.3.0",
     "react-tabs": "^6.0.2",
-    "tailwind-merge": "^2.5.4",
+    "tailwind-merge": "^2.5.5",
     "yup": "^1.4.0"
   },
   "devDependencies": {
