--- a/package.json
+++ b/package.json
@@ -10,61 +10,61 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@emotion/react": "^11.13.3",
-    "@emotion/styled": "^11.13.0",
-    "@fortawesome/fontawesome-svg-core": "^6.6.0",
-    "@fortawesome/free-brands-svg-icons": "^6.6.0",
-    "@fortawesome/free-regular-svg-icons": "^6.6.0",
-    "@fortawesome/free-solid-svg-icons": "^6.6.0",
-    "@fortawesome/react-fontawesome": "^0.2.2",
-    "@headlessui/react": "^2.1.10",
-    "@heroicons/react": "^2.2.0",
-    "@mui/icons-material": "^6.1.10",
-    "@mui/material": "^6.1.4",
-    "@radix-ui/react-accordion": "^1.2.1",
-    "@reduxjs/toolkit": "^2.2.7",
-    "@tabler/icons-react": "^3.24.0",
-    "@types/react-tooltip": "^4.2.4",
-    "antd": "^5.21.2",
-    "antd-input-otp": "^2.1.0",
-    "axios": "^1.7.7",
-    "clsx": "^2.1.1",
-    "date-fns": "^4.1.0",
-    "formik": "^2.4.6",
-    "framer-motion": "^11.13.1",
-    "i18next": "^23.15.1",
-    "lucide-react": "^0.447.0",
-    "react": "^18.3.1",
-    "react-bootstrap": "^2.10.5",
-    "react-dom": "^18.3.1",
-    "react-hook-form": "^7.53.0",
-    "react-i18next": "^15.0.2",
-    "react-rating-stars-component": "^2.2.0",
-    "react-redux": "^9.1.2",
-    "react-router-dom": "^6.26.2",
-    "react-star-ratings": "^2.3.0",
-    "react-tabs": "^6.0.2",
-    "tailwind-merge": "^2.5.5",
-    "yup": "^1.4.0"
+    "@emotion/react": "11.13.3",
+    "@emotion/styled": "11.13.0",
+    "@fortawesome/fontawesome-svg-core": "6.6.0",
+    "@fortawesome/free-brands-svg-icons": "6.6.0",
+    "@fortawesome/free-regular-svg-icons": "6.6.0",
+    "@fortawesome/free-solid-svg-icons": "6.6.0",
+    "@fortawesome/react-fontawesome": "0.2.2",
+    "@headlessui/react": "2.1.10",
+    "@heroicons/react": "2.2.0",
+    "@mui/icons-material": "6.1.10",
+    "@mui/material": "6.1.4",
+    "@radix-ui/react-accordion": "1.2.1",
+    "@reduxjs/toolkit": "2.2.7",
+    "@tabler/icons-react": "3.24.0",
+    "@types/react-tooltip": "4.2.4",
+    "antd": "5.21.2",
+    "antd-input-otp": "2.1.0",
+    "axios": "1.7.7",
+    "clsx": "2.1.1",
+    "date-fns": "4.1.0",
+    "formik": "2.4.6",
+    "framer-motion": "11.13.1",
+    "i18next": "23.15.1",
+    "lucide-react": "0.447.0",
+    "react": "18.3.1",
+    "react-bootstrap": "2.10.5",
+    "react-dom": "18.3.1",
+    "react-hook-form": "7.53.0",
+    "react-i18next": "15.0.2",
+    "react-rating-stars-component": "2.2.0",
+    "react-redux": "9.1.2",
+    "react-router-dom": "6.26.2",
+    "react-star-ratings": "2.3.0",
+    "react-tabs": "6.0.2",
+    "tailwind-merge": "2.5.5",
+    "yup": "1.4.0"
   },
   "devDependencies": {
-    "@ant-design/pro-components": "^2.7.19",
-    "@eslint/js": "^9.9.0",
-    "@types/react": "^18.3.3",
-    "@types/react-dom": "^18.3.0",
-    "@types/react-star-ratings": "^2.3.3",
-    "@types/swiper": "^6.0.0",
-    "@vitejs/plugin-react": "^4.3.1",
-    "autoprefixer": "^10.4.20",
-    "eslint": "^9.9.0",
-    "eslint-plugin-react-hooks": "^5.1.0-rc.0",
-    "eslint-plugin-react-refresh": "^0.4.9",
-    "globals": "^15.9.0",
-    "postcss": "^8.4.47",
-    "swiper": "^11.1.14",
-    "tailwindcss": "^3.4.13",
-    "typescript": "^5.5.3",
-    "typescript-eslint": "^8.0.1",
-    "vite": "^5.4.1"
+    "@ant-design/pro-components": "2.7.19",
+    "@eslint/js": "9.9.0",
+    "@types/react": "18.3.3",
+    "@types/react-dom": "18.3.0",
+    "@types/react-star-ratings": "2.3.3",
+    "@types/swiper": "6.0.0",
+    "@vitejs/plugin-react": "4.3.1",
+    "autoprefixer": "10.4.20",
+    "eslint": "9.9.0",
+    "eslint-plugin-react-hooks": "5.1.0-rc.0",
+    "eslint-plugin-react-refresh": "0.4.9",
+    "globals": "15.9.0",
+    "postcss": "8.4.47",
+    "swiper": "11.1.14",
+    "tailwindcss": "3.4.13",
+    "typescript": "5.5.3",
+    "typescript-eslint": "8.0.1",
+    "vite": "5.4.1"
   }
 }
