--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@headlessui/react": "2.1.10",
     "@heroicons/react": "2.2.0",
     "@mui/icons-material": "6.1.10",
-    "@mui/material": "6.1.4",
+    "@mui/material": "^6.2.1",
     "@radix-ui/react-accordion": "1.2.1",
     "@reduxjs/toolkit": "2.2.7",
     "@tabler/icons-react": "3.24.0",
@@ -39,6 +39,7 @@
     "react-dom": "18.3.1",
     "react-hook-form": "7.53.0",
     "react-i18next": "15.0.2",
+    "react-icons": "^5.4.0",
     "react-rating-stars-component": "2.2.0",
     "react-redux": "9.1.2",
     "react-router-dom": "6.26.2",
