--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "formik": "2.4.6",
     "framer-motion": "11.13.1",
     "i18next": "23.15.1",
+    "lodash": "^4.17.21",
     "lucide-react": "0.447.0",
     "react": "18.3.1",
     "react-bootstrap": "2.10.5",
