--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@atlaskit/avatar": "^21.17.6",
+    "@atlaskit/comment": "^12.0.2",
     "@emotion/react": "11.13.3",
     "@emotion/styled": "11.13.0",
     "@fortawesome/fontawesome-svg-core": "6.6.0",
@@ -19,6 +21,7 @@
     "@fortawesome/react-fontawesome": "0.2.2",
     "@headlessui/react": "2.1.10",
     "@heroicons/react": "2.2.0",
+    "@iconify/react": "^5.1.0",
     "@mui/icons-material": "6.1.10",
     "@mui/material": "^6.2.1",
     "@radix-ui/react-accordion": "1.2.1",
@@ -30,6 +33,7 @@
     "axios": "1.7.7",
     "clsx": "2.1.1",
     "date-fns": "4.1.0",
+    "echarts-for-react": "^3.0.2",
     "formik": "2.4.6",
     "framer-motion": "11.13.1",
     "i18next": "23.15.1",
@@ -47,6 +51,7 @@
     "react-star-ratings": "2.3.0",
     "react-tabs": "6.0.2",
     "tailwind-merge": "2.5.5",
+    "theme": "^0.1.0",
     "yup": "1.4.0"
   },
   "devDependencies": {
