feat: implement UI edit and delete product by admin

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@headlessui/react": "2.1.10",
     "@heroicons/react": "2.2.0",
     "@iconify/react": "^5.1.0",
+    "@material-tailwind/react": "^2.1.10",
     "@mui/icons-material": "6.1.10",
     "@mui/material": "^6.2.1",
     "@radix-ui/react-accordion": "1.2.1",
@@ -40,6 +41,7 @@
     "lodash": "^4.17.21",
     "lucide-react": "0.447.0",
     "react": "18.3.1",
+    "react-apexcharts": "^1.7.0",
     "react-bootstrap": "2.10.5",
     "react-dom": "18.3.1",
     "react-hook-form": "7.53.0",
