--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "antd": "5.21.2",
     "antd-input-otp": "2.1.0",
     "axios": "1.7.7",
+    "chart.js": "^4.4.7",
     "clsx": "2.1.1",
     "date-fns": "4.1.0",
     "echarts-for-react": "^3.0.2",
@@ -43,6 +44,7 @@
     "react": "18.3.1",
     "react-apexcharts": "^1.7.0",
     "react-bootstrap": "2.10.5",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "18.3.1",
     "react-hook-form": "7.53.0",
     "react-i18next": "15.0.2",
